--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,16 +1,15 @@
 <!--- index.html -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2">
 
-
-
-<div class="jumbotron">
+<div class="jumbotron boxheight">
   <h1 class="display-4">Starwars Search</h1>
   <p class="lead">Please select the category and enter name to search.</p>
 
   <form [formGroup]="searchFrom" novalidate>
   <div class="form-group">
     <label for="category">Select what you want to search</label>
-    <select class="form-control" id="category" formControlName="category">
+    <select class="form-control" id="category" formControlName="category" (change)="resetDisplayData()" required>
+      <option value="">Select</option>
       <option value="film">Film</option>
       <option value="people">People</option>
       <option value="starship">Starship</option>
@@ -21,22 +20,26 @@
   </div>
   <div class="form-group">
     <label for="search">You need to enter name or part of the name in textbox</label>
-    <input type="text" class="form-control" formControlName="search" id="search" placeholder="search text">
+    <input type="text" class="form-control" formControlName="search" id="search" (change)="resetDisplayData()"  required placeholder="search text">
   </div>
-  <button type="button" [disabled]="loading" (click)="searchData()" class="btn btn-primary">Search</button>
+  <button type="button" [disabled]="loading" (click)="newSearch()" class="btn btn-primary">Search</button>
   &nbsp;
   <button type="button" (click)="resetForm()" class="btn btn-warning">Reset</button>
 </form>
-
   <hr class="my-4">
+  
+  <h6 *ngIf="responseArr.length > 0">Records found <span class="badge badge-secondary">{{count}}</span></h6>
+
   <table class="table">
-    <ng-container *ngIf="category == 'film'">  
+    <ng-container *ngIf="category == 'film' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Title</th>
-          <th scope="col">Directory</th>
+          <th scope="col">Director</th>
           <th scope="col">producer</th>
+          <th scope="col">Episode Id</th>
+          <th scope="col">Opening Crawl</th>
         </tr>
       </thead>
       <tbody>
@@ -45,11 +48,13 @@
           <td>{{data.title}}</td>
           <td>{{data.director}}</td>
           <td>{{data.producer}}</td>
+          <td>{{data.episodeId}}</td>
+          <td>{{data.openingCrawl}}</td>
         </tr>
       </tbody>
     </ng-container>
 
-    <ng-container *ngIf="category == 'people'">  
+    <ng-container *ngIf="category == 'people' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -71,15 +76,15 @@
     </ng-container>
 
 
-    <ng-container *ngIf="category == 'starship'">  
+    <ng-container *ngIf="category == 'starship' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
-          <th scope="col">model</th>
-          <th scope="col">manufacturer</th>
-          <th scope="col">length</th>
-          <th scope="col">passengers</th>
+          <th scope="col">Model</th>
+          <th scope="col">Manufacturer</th>
+          <th scope="col">Length</th>
+          <th scope="col">Passengers</th>
         </tr>
       </thead>
       <tbody>
@@ -95,15 +100,15 @@
     </ng-container>
 
 
-    <ng-container *ngIf="category == 'vehicle'">  
+    <ng-container *ngIf="category == 'vehicle' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
-          <th scope="col">model</th>
-          <th scope="col">manufacturer</th>
-          <th scope="col">cost In Credits</th>
-          <th scope="col">length</th>
+          <th scope="col">Model</th>
+          <th scope="col">Manufacturer</th>
+          <th scope="col">Cost In Credits</th>
+          <th scope="col">Length</th>
         </tr>
       </thead>
       <tbody>
@@ -118,7 +123,7 @@
       </tbody>
     </ng-container>
 
-    <ng-container *ngIf="category == 'specie'">  
+    <ng-container *ngIf="category == 'specie' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -141,15 +146,15 @@
       </tbody>
     </ng-container>
 
-    <ng-container *ngIf="category == 'planet'">  
+    <ng-container *ngIf="category == 'planet' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
-          <th scope="col">rotationPeriod</th>
-          <th scope="col">orbitalPeriod</th>
-          <th scope="col">surfaceWater</th>
-          <th scope="col">population</th>
+          <th scope="col">Rotation Period</th>
+          <th scope="col">Orbital Period</th>
+          <th scope="col">Surface Water</th>
+          <th scope="col">Population</th>
         </tr>
       </thead>
       <tbody>
@@ -163,7 +168,23 @@
         </tr>
       </tbody>
     </ng-container>
-
   </table>
-  
+
+  <div class="container" *ngIf="loadNextLink != '' && loadNextLink != 'null'">
+    <div class="row">
+      <div class="col text-center">
+        <button class="btn btn-outline-info mx-auto d-block" (click)="searchData()" [disabled]= "loading == true || this.loadNextLink == '' ||  this.loadNextLink == 'null' ">Load more Data</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mx-auto p-3" *ngIf="loading == true">
+    <div id="progressbar"></div>
+  </div>
+
+  <ng-container *ngIf="responseArr.length == 0 && response == true">
+    <div class="alert alert-warning" role="alert">
+      It seems, no data found. Please search again
+    </div>
+  </ng-container>
 </div>
