--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,3 @@
-<!--- index.html -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2">
-
 <div class="jumbotron boxheight">
   <h1 class="display-4">Starwars Search</h1>
   <p class="lead">Please select the category and enter name to search.</p>
@@ -20,24 +17,27 @@
   </div>
   <div class="form-group">
     <label for="search">You need to enter name or part of the name in textbox</label>
-    <input type="text" class="form-control" formControlName="search" id="search" (change)="resetDisplayData()"  required placeholder="search text">
+    <input type="text" class="form-control" autocomplete="off" formControlName="search" id="search" (change)="resetDisplayData()"  required placeholder="search text">
   </div>
-  <button type="button" [disabled]="loading" (click)="newSearch()" class="btn btn-primary">Search</button>
-  &nbsp;
-  <button type="button" (click)="resetForm()" class="btn btn-warning">Reset</button>
+  <br />
+  <div class="form-group">
+    <button type="button" [disabled]="loading" (click)="newSearch()" class="btn btn-primary">Search</button>
+    &nbsp;
+    <button type="button" (click)="resetForm()" class="btn btn-warning">Reset</button>
+  </div>  
 </form>
   <hr class="my-4">
   
   <h6 *ngIf="responseArr.length > 0">Records found <span class="badge badge-secondary">{{count}}</span></h6>
 
-  <table class="table">
+  <table class="table table-striped">
     <ng-container *ngIf="category == 'film' && responseArr.length > 0">  
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Title</th>
           <th scope="col">Director</th>
-          <th scope="col">producer</th>
+          <th scope="col">Producer</th>
           <th scope="col">Episode Id</th>
           <th scope="col">Opening Crawl</th>
         </tr>
@@ -128,10 +128,10 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
-          <th scope="col">classification</th>
-          <th scope="col">designation</th>
-          <th scope="col">average Height</th>
-          <th scope="col">skinColors</th>
+          <th scope="col">Classification</th>
+          <th scope="col">Designation</th>
+          <th scope="col">Average Height</th>
+          <th scope="col">Skin Colors</th>
         </tr>
       </thead>
       <tbody>
